--- a/public/404.html
+++ b/public/404.html
@@ -6,6 +6,6 @@
     <title>Page not found</title>
   </head>
   <body>
-    <h1>Handsup Madapaka!</h1>
+    <h1>Sorry, this page is corrupted.</h1>
   </body>
 </html>
